# SindhiScript

./: .gitignore  README.md  install_font.py  pyproject.toml  test_user_code.py  web_ide.html  web_ide.py
docs/: حوالو.md  رومن_ترجمو.md  شروعات.md
examples/: سنسار.سن
scratch/: smoke_test_compound.py
سنڌي/: __init__.py  __main__.py  ast_nodes.py  environment.py  errors.py  evaluator.py  lexer.py  module_loader.py  parser.py  repl.py  stdlib.py  terminal.py  tokenizer.py
