[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sindhiscript"
version = "0.1.0"
description = "A native Sindhi-script programming language"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "SindhiScript", email = "sindhiscript@example.com" }
]
dependencies = [
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
sindhiscript = "سنڌي.__main__:main"
"سنڌي" = "سنڌي.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["سنڌي*"]
